add cobbler to build server classes

--- a/data/class_groups/build.yaml
+++ b/data/class_groups/build.yaml
@@ -3,6 +3,7 @@ classes:
   - apache::mod::proxy
   - apache::mod::wsgi
   - apache::mod::proxy_http
+  - cobbler
   - naginator
   - collectd
   # - coi::profiles::cobbler_server
