use full path to repo for puppet install to support ftp or other methods

--- a/data/cobbler/cobbler.yaml
+++ b/data/cobbler/cobbler.yaml
@@ -1,5 +1,6 @@
 preseed:
-  repo: "havana-proposed"
+  repo: "http://openstack-repo.cisco.com/openstack/cisco havana-proposed main"
+#  repo: "ftp://ftpeng.cisco.com/openstack/cisco havana-proposed main"
 
 profile:
   name: "precise"
