fixes power management

--- a/data/cobbler/cobbler.yaml
+++ b/data/cobbler/cobbler.yaml
@@ -13,10 +13,10 @@ netcfg/choose_interface=auto"
 
 node-global:
   profile: "precise-x86_64"
-  netboot-enabled: "1"
-  power-type: "ipmitool"
-  power-user: "admin"
-  power-pass: "password"
+  netboot_enabled: "1"
+  power_type: "ipmitool"
+  power_user: "admin"
+  power_pass: "password"
   kickstart: "/etc/cobbler/preseed/cisco-preseed"
   kopts: "netcfg/get_nameservers=2.4.1.254 \
 netcfg/confirm_static=true \
@@ -32,7 +32,7 @@ netcfg/dhcp_failed=true"
 
 build-server:
   hostname: "build-server.cisco.com"
-  power-address: "192.168.2.101"
+  power_address: "192.168.2.101"
   interfaces:
     eth0:
       mac-address: "a1:bb:cc:dd:ee:ff"
@@ -42,7 +42,7 @@ build-server:
 
 load-balancer01:
   hostname: "load-balancer01.cisco.com"
-  power-address: "192.168.2.102"
+  power_address: "192.168.2.102"
   interfaces:
     eth0:
       mac-address: "aa:b1:cc:dd:ee:ff"
@@ -52,7 +52,7 @@ load-balancer01:
 
 load-balancer02:
   hostname: "load-balancer02.cisco.com"
-  power-address: "192.168.2.103"
+  power_address: "192.168.2.103"
   interfaces:
     eth0:
       mac-address: "aa:bb:c1:dd:ee:ff"
@@ -62,7 +62,7 @@ load-balancer02:
       
 swift-proxy01:
   hostname: "swift-proxy01"
-  power-address: "192.168.2.104"
+  power_address: "192.168.2.104"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:d1:ee:ff"
@@ -72,7 +72,7 @@ swift-proxy01:
       
 swift-proxy02:
   hostname: "swift-proxy02.cisco.com"
-  power-address: "192.168.2.105"
+  power_address: "192.168.2.105"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:dd:e1:ff"
@@ -82,7 +82,7 @@ swift-proxy02:
       
 swift-storage01:
   hostname: "swift-storage01.cisco.com"
-  power-address: "192.168.2.106"
+  power_address: "192.168.2.106"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:dd:ee:f1"
@@ -92,7 +92,7 @@ swift-storage01:
 
 swift-storage02:
   hostname: "swift-storage02.cisco.com"
-  power-address: "192.168.2.107"
+  power_address: "192.168.2.107"
   interfaces:
     eth0:
       mac-address: "a2:bb:cc:dd:ee:ff"
@@ -102,7 +102,7 @@ swift-storage02:
 
 swift-storage03:
   hostname: "swift-storage03.cisco.com"
-  power-address: "192.168.2.108"
+  power_address: "192.168.2.108"
   interfaces:
     eth0:
       mac-address: "aa:b2:cc:dd:ee:ff"
@@ -112,7 +112,7 @@ swift-storage03:
 
 control-server:
   hostname: "control-server.cisco.com"
-  power-address: "192.168.2.109"
+  power_address: "192.168.2.109"
   interfaces:
     eth0:
       mac-address: "aa:bb:c2:dd:ee:ff"
@@ -122,7 +122,7 @@ control-server:
       
 control-server01:
   hostname: "control-server01.cisco.com"
-  power-address: "192.168.2.110"
+  power_address: "192.168.2.110"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:d2:ee:ff"
@@ -132,7 +132,7 @@ control-server01:
       
 control-server02:
   hostname: "control-server02.cisco.com"
-  power-address: "192.168.2.111"
+  power_address: "192.168.2.111"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:dd:e2:ff"
@@ -142,7 +142,7 @@ control-server02:
 
 control-server03:
   hostname: "control-server03.cisco.com"
-  power-address: "192.168.2.112"
+  power_address: "192.168.2.112"
   interfaces:
     eth0:
       mac-address: "aa:bb:cc:dd:ee:f2"
@@ -152,7 +152,7 @@ control-server03:
            
 compute-server:
   hostname: "compute-server.cisco.com"
-  power-address: "192.168.2.113"
+  power_address: "192.168.2.113"
   interfaces:
     eth0:
       mac-addres: "a3:bb:cc:dd:ee:ff"
@@ -162,7 +162,7 @@ compute-server:
       
 compute-server01:
   hostname: "compute-server01.cisco.com"
-  power-address: "192.168.2.114"
+  power_address: "192.168.2.114"
   interfaces:
     eth0:
       mac-addres: "aa:b3:cc:dd:ee:ff"
@@ -172,7 +172,7 @@ compute-server01:
       
 compute-server02:
   hostname: "compute-server02.cisco.com"
-  power-address: "192.168.2.115"
+  power_address: "192.168.2.115"
   interfaces:
     eth0:
       mac-addres: "aa:bb:c3:dd:ee:ff"
@@ -182,7 +182,7 @@ compute-server02:
 
 compute-server03:
   hostname: "compute-server03.cisco.com"
-  power-address: "192.168.2.116"
+  power_address: "192.168.2.116"
   interfaces:
     eth0:
       mac-addres: "aa:bb:cc:d3:ee:ff"
