--- a/data/role_mappings.yaml
+++ b/data/role_mappings.yaml
@@ -23,3 +23,9 @@ swift-proxy02: swift_proxy
 swift-storage01: swift_storage
 swift-storage02: swift_storage
 swift-storage03: swift_storage
+
+#compressed_ha
+
+node01: compressed_ha
+node02: compressed_ha
+node03: compressed_ha
