Changed default definitions for the Full HA scenario from compute04 to build-server for consistency with the rest of the puppet module.

--- a/data/hiera_data/user.full_ha.yaml
+++ b/data/hiera_data/user.full_ha.yaml
@@ -3,9 +3,9 @@
 #
 
 ntp_servers:
-  - compute04.dmz-pod2.lab
+  - build-server.dmz-pod2.lab
 
-build_node_name: compute04.dmz-pod2.lab
+build_node_name: build-server.dmz-pod2.lab
 domain_name: dmz-pod2.lab
 
 coe::base::controller_hostname: control
