adding missing rabbit params and data mappings

--- a/data/hiera_data/user.compressed_ha.yaml
+++ b/data/hiera_data/user.compressed_ha.yaml
@@ -54,6 +54,7 @@ swift_hash: swift_secret
 galera::server::wsrep_sst_password: wsrep_password
 galera::monitor::monitor_password: monitor_pass
 glance::backend::swift::swift_store_key: swift_pass
+rabbitmq::server::config_mirrored_queues: true
 
 #
 # HA connections
