Add compressed_ha_cephall and cephosd roles
In order to achive HA for volume service, we need Ceph.
This commit adds two roles: one which is identical to
the existing compressed_ha role but with the ceph_all group
added (deployes mon and osd) and another with is also identical
but deploys an osd only.

--- a/data/scenarios/compressed_ha.yaml
+++ b/data/scenarios/compressed_ha.yaml
@@ -22,3 +22,33 @@ roles:
       - compute
       - provider_network_controller
       - test_file
+  compressed_ha_cephall:
+    classes:
+      - coe::base
+      - naginator::control_target
+      - coe::network::interface
+      - openstack-ha::load-balancer
+      - cinder::setup_test_volume
+      #- openstack::swift::proxy
+      #- openstack::swift::storage-node
+    class_groups:
+      - controller
+      - compute
+      - provider_network_controller
+      - ceph_all
+      - test_file
+  compressed_ha_cephosd:
+    classes:
+      - coe::base
+      - naginator::control_target
+      - coe::network::interface
+      - openstack-ha::load-balancer
+      - cinder::setup_test_volume
+      #- openstack::swift::proxy
+      #- openstack::swift::storage-node
+      - cephdeploy::osdwrapper
+    class_groups:
+      - controller
+      - compute
+      - provider_network_controller
+      - test_file
