Add options for templated preseed
A recent patch to puppet-cobbler (9f96d21) removed a static
preseed file from the cobbler setup and replaced it with a
template.  This patch shows users how to add data for use
with the cobbler template.

Partial-Bug: #1263310

--- a/data/hiera_data/user.common.yaml
+++ b/data/hiera_data/user.common.yaml
@@ -1,3 +1,6 @@
+# For proxy service if necessary.
+#proxy: 'http://proxy-server.domain.com:8080'
+
 domain_name: domain.name
 ntp_servers:
   - time-server.domain.name
