Switch cobbler to coi::profiles::cobbler_server
This change lets us use coi::profiles::cobbler_server instead
of the cobbler class, which makes it easier to hiera-ize data.

--- a/data/class_groups/build.yaml
+++ b/data/class_groups/build.yaml
@@ -3,10 +3,10 @@ classes:
   - apache::mod::proxy
   - apache::mod::wsgi
   - apache::mod::proxy_http
-  - cobbler
+  #- cobbler
   - naginator
   - collectd
-  # - coi::profiles::cobbler_server
+  - coi::profiles::cobbler_server
   - coi::profiles::cache_server
   - coi::profiles::puppet::master
   - graphite
