--- a/data/cobbler/cobbler.yaml
+++ b/data/cobbler/cobbler.yaml
@@ -1,6 +1,6 @@
 preseed:
-  repo: "http://openstack-repo.cisco.com/openstack/cisco havana-proposed main"
-#  repo: "ftp://ftpeng.cisco.com/openstack/cisco havana-proposed main"
+  repo: "http://openstack-repo.cisco.com/openstack/cisco havana main"
+#  repo: "ftp://ftpeng.cisco.com/openstack/cisco havana main"
 
 profile:
   name: "precise"
