--- a/data/scenarios/compressed_ha.yaml
+++ b/data/scenarios/compressed_ha.yaml
@@ -67,3 +67,14 @@ roles:
       - compute
       - provider_network_controller
       - test_file
+  compute:
+    classes:
+      - coe::base
+      - naginator::compute_target
+      - cinder::setup_test_volume
+    class_groups:
+      - compute
+  swift_storage:
+    classes:
+      - coe::base
+      - openstack::swift::storage-node
