--- a/data/hiera_data/hostname/ceph01.yaml
+++ b/data/hiera_data/hostname/ceph01.yaml
@@ -1,4 +1,13 @@
-# example for using disks on a certain server for Ceph OSDs
+# has compute must be set for any server running nova compute
+# nova uses the secret from virsh
+cephdeploy::has_compute: true
+
+# setup_pools is needed to create the initial images and volumes pool to be
+# used by glance and cinder, respectively.
+cephdeploy::osd::setup_pools: true
+
+# these are the disks for this particular host that you wish to use as OSDs.
+# specify disks here will DESTROY any data on this disk during the first puppet run
 cephdeploy::osdwrapper::disks:
   - sdb
   - sdc
