--- a/data/hiera_data/user.common.yaml
+++ b/data/hiera_data/user.common.yaml
@@ -52,9 +52,6 @@ time_zone: UTC
 # (refer to http://projects.puppetlabs.com/issues/1168).
 build_node_name: build-server.domain.com
 
-# The domain name of the build node.
-domain_name: domain.name
-
 # The IP address to be used to connect to Horizon and external
 # services on the control node.  In the compressed_ha or full_ha scenarios,
 # this will be an address to be configured as a VIP on the HAProxy
@@ -80,7 +77,7 @@ controller_admin_address: 192.168.242.10
 # (which is predefined already in $controller_node_internal, and the internal
 # interface for compute nodes.  It is generally also the IP address
 # used in Cobbler node definitions.
-internal_ip: "%{ipaddress_eth3}"
+internal_ip: "%{ipaddress_eth1}"
 
 # The external_interface is used to provide a Layer2 path for
 # the l3_agent external router interface.  It is expected that
@@ -147,13 +144,13 @@ install_drive: /dev/sda
 
 # Uncomment this line and set it to true if you want to use bonded
 # ethernet interfaces.
-#interface_bonding = 'true'
+#interface_bonding: 'true'
 
 # The IP address on which vncserver proxyclient should listen.
 # This should generally be an address that is accessible via
 # horizon.  You can set it to an actual IP address (e.g. "192.168.1.1"),
 # or use facter to get the IP address assigned to a particular interface.
-nova::compute::vncserver_proxyclient_address: "%{ipaddress_eth3}"
+nova::compute::vncserver_proxyclient_address: "%{ipaddress_eth1}"
 
 ### The following are passwords and usernames used for
 ### individual services.  You may wish to change the passwords below
@@ -198,7 +195,7 @@ password: password123
 ### Swift configuration
 # The IP address on which local Swift traffic will be passed
 # (e.g. replication traffic and other intra-cluster data).
-swift_local_net_ip: "%{ipaddress_eth3}"
+swift_local_net_ip: "%{ipaddress_eth1}"
 
 # The username used to authenticate to the Swift cluster.
 swift_service_password: swift_pass
@@ -231,6 +228,8 @@ swift_admin_address: 192.168.242.41
 swift_storage_interface: eth0.222
 
 # The IP address to be configured on the Swift storage interface.
+# note that this assumes you have created a vlan "222" and associated
+# it with the interface as described in swift_storage_interface: above
 swift_local_net_ip: "%{ipaddress_eth0_222}"
 
 # The netmask to be configured on the Swift storage interface.
