more live migration hacking

--- a/data/class_groups/nova_compute.yaml
+++ b/data/class_groups/nova_compute.yaml
@@ -6,3 +6,7 @@ classes:
   - "nova::compute::%{network_service}"
   - "%{network_service}"
   - "%{network_service}::agents::%{network_plugin}"
+# stuff for live migration
+  - nova::migration::libvirt
+  - nova::compute::libvirt:wq
+
