--- a/data/class_groups/nova_compute.yaml
+++ b/data/class_groups/nova_compute.yaml
@@ -7,6 +7,5 @@ classes:
   - "%{network_service}"
   - "%{network_service}::agents::%{network_plugin}"
 # stuff for live migration
-  - nova::migration::libvirt
-  - nova::compute::libvirt:wq
-
+  - nova::compute::libvirt
+  - coe::compute::migration
